CURL request to webpage

--- a/Win32Playground/Win32Playground.vcxproj
+++ b/Win32Playground/Win32Playground.vcxproj
@@ -89,7 +89,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>D:\curl-7.76.1\builds\libcurl-vc-x86-release-static-ipv6-sspi-winssl\include\</AdditionalIncludeDirectories>
     </ClCompile>
